# mbbut

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
claude/: GOALS.md  IMPLEMENTATION_PLAN.md  Optimizations.md  TESTING_TODO.md  Worktree.md
src/: main.rs
src/backup/: mod.rs
src/compression/: mod.rs
src/config/: mod.rs
src/hashing/: mod.rs
